refatoração e adicionando audio de fundo

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="shortcut icon" href="./src/assets/favicon/Favicon.ico" type="image/x-icon">
+
     <!-- Fonte Press Start 2P -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,10 +21,14 @@
 
     <!-- main -->
     <link rel="stylesheet" href="./src/styles/main.css">
-    <title>Yu-Gi-Oh | Jo-ken-po</title>
+    <title>Yu-Gi-Oh | Jo-Ken-Po</title>
 </head>
 
 <body>
+
+    <audio id="bgm" loop>
+        <source src="./src/assets/audios/egyptian_duel.mp3" type="audio/mp3" />
+    </audio>
 
     <div class="bg-video">
         <video class="video" autoplay loop muted>
